# Pacman

./: CMakeLists.txt  README.md  doxygen.txt  main.cpp  sfml.supp  valgrind.xml
.github/workflows/: build_logic.yml  static.yml
Logic/: CMakeLists.txt  Difficulty.cpp  Difficulty.h  Observer.cpp  Observer.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h
Logic/Entities/: AbstractFactory.h  CoinModel.cpp  CoinModel.h  EntityModel.cpp  EntityModel.h  FruitModel.cpp  FruitModel.h  GhostModel.cpp  GhostModel.h  PacManModel.cpp  PacManModel.h  PacmanModel.cpp  PacmanModel.h  WallModel.cpp  WallModel.h
Logic/Entities/Ghosts/: AmbushGhost.cpp  AmbushGhost.h  ChasingGhost.cpp  ChasingGhost.h  GhostModel.cpp  GhostModel.h  GhostNavigator.cpp  GhostNavigator.h  RandomGhost.cpp  RandomGhost.h
Representation/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Game.cpp  Game.h  Random.h  SoundManager.cpp  SoundManager.h  State.cpp  State.h  StateManager.cpp  StateManager.h  Stopwatch.h  Window.cpp  Window.h
Representation/Entities/: CoinView.cpp  CoinView.h  ConcreteFactory.cpp  ConcreteFactory.h  EntityView.cpp  EntityView.h  FruitView.cpp  FruitView.h  GhostView.cpp  GhostView.h  PacManView.cpp  PacManView.h  PacmanView.cpp  PacmanView.h  WallView.cpp  WallView.h  WorldView.cpp  WorldView.h
Representation/States/: GameOverState.cpp  GameOverState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  StateManager.cpp  StateManager.h  VictoryState.cpp  VictoryState.h
Representation/assets/: sprite_raw.aseprite
Representation/levels/: level_1.txt  level_2.txt  pacman_map.txt  small_map.txt
Representation/sounds/: eatingCoins.flac  eatingFruit.flac  eatingGhost.flac  ghostFrightened.flac  ghostMove.flac  pacmanDeath.flac
Representation/sounds/eduard/: eatingCoin.flac  eatingFruit.flac  eatingGhost.flac  ghostFrightened.flac  ghostMove.flac  pacmanDeath.flac
docs/: CNAME
docs/html/: _abstract_factory_8h.html  _abstract_factory_8h.js  _abstract_factory_8h__dep__incl.map  _abstract_factory_8h__dep__incl.md5  _abstract_factory_8h__incl.map  _abstract_factory_8h__incl.md5  _abstract_factory_8h_source.html  _ambush_ghost_8cpp.html  _ambush_ghost_8cpp__incl.map  _ambush_ghost_8cpp__incl.md5  _ambush_ghost_8h.html  _ambush_ghost_8h.js  _ambush_ghost_8h__dep__incl.map  _ambush_ghost_8h__dep__incl.md5  _ambush_ghost_8h__incl.map  _ambush_ghost_8h__incl.md5  _ambush_ghost_8h_source.html  _asset_manager_8cpp.html  _asset_manager_8cpp__incl.map  _asset_manager_8cpp__incl.md5  _asset_manager_8h.html  _asset_manager_8h__dep__incl.map  _asset_manager_8h__dep__incl.md5  _asset_manager_8h__incl.map  _asset_manager_8h__incl.md5  _asset_manager_8h_source.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h_source.html  _chasing_ghost_8cpp.html  _chasing_ghost_8cpp__incl.map  _chasing_ghost_8cpp__incl.md5  _chasing_ghost_8h.html  _chasing_ghost_8h.js  _chasing_ghost_8h__dep__incl.map  _chasing_ghost_8h__dep__incl.md5  (+703 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  (+64 more)
